--- a/Kops-Commands.yml
+++ b/Kops-Commands.yml
@@ -20,8 +20,8 @@ export EDITOR='/usr/bin/nano'
 # create a cluster using KOPS and generate a cluster file and save it carefully and do necessary changes
 
 kops create cluster --name=saisandeep-devops.xyz \
---state=s3://saisandeep-devops.xyz --zones=us-east-1a,us-east-1b,us-east-1c \
---node-count=3 --control-plane-count=1 --node-size=t3.medium --control-plane-size=t3.medium \
+--state=s3://saisandeep-devops.xyz --zones=us-east-1a,us-east-1b \
+--node-count=2 --control-plane-count=1 --node-size=t3.medium --control-plane-size=t3.medium \
 --control-plane-zones=us-east-1a --control-plane-volume-size 10 --node-volume-size 10 \
 --ssh-public-key ~/.ssh/id_ed25519.pub \
 --dns-zone=saisandeep-devops.xyz --dry-run --output yaml
